--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate')%>
-    <h1>All Campgrounds</h1>
+    <h1>Campgrounds</h1>
 
     <% for(let c of alldata) { %>
         <div class="carb  mb-3">
