--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,5 +1,8 @@
 <% layout('layouts/boilerplate')%>
-    <h1>Campgrounds</h1>
+  <div class="col-md-4 d-flex align-items-center justify-content-center">
+    <h1>All Campgrounds</h1>
+ </div>
+ 
 
     <% for(let c of alldata) { %>
         <div class="carb  mb-3">
