--- a/views/campground/showcamps.ejs
+++ b/views/campground/showcamps.ejs
@@ -5,29 +5,38 @@
     <div class="col-6">
     
 
-        
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+      <div id="carouselExampleControls" class="carousel slide mb-3" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <% camp.images.forEach((img,i)=>{ %>
-       
-          <div class="carousel-item <%= i===0? 'active' :'' %>" >
-            <img src="<%= img.url %>" class="d-block w-100 " alt="">
-          </div>
-          <% }) %>
+          <% if (camp.images.length > 0) { %>
+            <% camp.images.forEach((img, i) => { %>
+              <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                <img src="<%= img.url %>" class="d-block w-100" alt="">
+              </div>
+            <% }) %>
+          <% } else { %>
+            <div class="carousel-item active">
+              <div class="no-image-placeholder">
+                <span class="no-image-text">No image</span>
+              </div>
+            </div>
+          <% } %>
         </div>
-        <% if(camp.images.length>1) {%>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      
+        <% if (camp.images.length > 1) { %>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         <% } %>
       </div>
       
-
        
 
 
