--- a/views/campground/showcamps.ejs
+++ b/views/campground/showcamps.ejs
@@ -1,5 +1,7 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylessheets/stars.css">
+<link rel="stylesheet" href="/stylessheets/show.css">
+
   <div class="row">
 
     <div class="col-6">
