--- a/public/stylessheets/home.css
+++ b/public/stylessheets/home.css
@@ -4,7 +4,7 @@ body {
     min-height: 100vh;
     margin: 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixis");
+      url("./lionello-delpiccolo-5xPnw59QFLQ-unsplash.jpg");
     background-size: cover;
     background-position: center;
   }
