--- a/public/stylessheets/home.css
+++ b/public/stylessheets/home.css
@@ -3,12 +3,12 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(rgba(0, 0, 0,0.1), rgba(0, 0, 0, 0.0)),
       url("./lionello-delpiccolo-5xPnw59QFLQ-unsplash.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
   }
-  
   /* The rest of your CSS rules remain the same */
   
       main {
