--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -38,11 +38,11 @@
             </p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold bg-white">View Campgrounds</a>
         </main>
-        <footer class="mt-auto text-dark-50">
+       
+    </div>
+ <footer class="mt-auto text-white-50">
             <p>&copy;2023 YelpCamp</p>
         </footer>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
