--- a/views/campground/showcamps.ejs
+++ b/views/campground/showcamps.ejs
@@ -114,7 +114,7 @@
           </div>
         </div>
       
-        <button class="btn btn-info">Post</button>
+        <button class="btn btn-info mb-3">Post</button>
       </form>
 <% } %>
 
