--- a/views/campground/showcamps.ejs
+++ b/views/campground/showcamps.ejs
@@ -91,7 +91,7 @@
         <div class="mb-3">
          
           <fieldset class="starability-basic">
-            <legend><h3>Review:</h3></legend>
+            <legend><h3>Make a Review</h3></legend>
             <input type="radio" id="no-rate" class="input-no-rate" name="review[ratings]" value="0" checked aria-label="No rating." />
             <input type="radio" id="second-rate1" name="review[ratings]" value="1" />
             <label for="second-rate1" title="Terrible">1 star</label>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="review" class="form-label">Review</label>
+          <label for="review" class="form-label">Review Text </label>
           <textarea class="form-control" name="review[body]" id="review" required></textarea>
           <div class="valid-feedback">
             Looks good!
