--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -36,11 +36,10 @@
                     </div>
 
                 </div>
-                <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile02" name="images" multiple>
-                    <!-- <label class="input-group-text" for="inputGroupFile02"></label> -->
+ <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="inputGroupFile02" name="images" multiple accept="image/*">
                   </div>
-
+                
 
                   <div class="mb-3" >
                     <label for="description" class="form-label ">Description</label>
