--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -33,7 +33,7 @@
         <main class="px-3">
             <h1>YelpCamp</h1>
  <p class="lead">
-                <h7>Welcome to Campground!</h7>
+                <h7>Welcome to Campgrounds!</h7>
               
             </p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold bg-white">View Campgrounds</a>
