--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -33,7 +33,8 @@
         <main class="px-3">
             <h1>YelpCamp</h1>
  <p class="lead">
-                <h7>Welcome to Campgrounds!</h7>
+                            <h7>Welcome to the Nature Retreat!<br>Explore and share your memorable experiences with fellow nature lovers!</h7> <br>
+
               
             </p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold bg-white">View Campgrounds</a>
